--- a/BreakingNews/Saved/Config/Windows/Engine.ini
+++ b/BreakingNews/Saved/Config/Windows/Engine.ini
@@ -42,4 +42,12 @@ JavaPath=(Path="")
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
 
