organized world outliner

--- a/BreakingNews/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BreakingNews/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,7 +78,6 @@ LastLevel=/Game/Maps/TestLevel
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Controller_SimpleAI.Controller_SimpleAI
 
 [PluginBrowser]
 InstalledPlugins=BlueManVehiclePhysics
@@ -692,6 +691,11 @@ BoolProperty.DefaultValueCategory=True
 IntProperty.Variable=True
 IntProperty.DefaultValueCategory=True
 Spline_C.HLOD=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1389,13 +1393,14 @@ bSCCUseGlobalSettings=False
 /Game/Player/BP_Player_Parent.BP_Player_Parent=0
 /Game/Player/MultiWheel.MultiWheel=0
 /Game/maxresdefault.maxresdefault=0
-/Game/Controller_SimpleAI.Controller_SimpleAI=0
+/Game/Controller_SimpleAI.Controller_SimpleAI=1
 /Game/Spline.Spline=0
 /Game/Player/Curves/Torque_Racing.Torque_Racing=0
+/Game/Test_HUD.Test_HUD=1
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Appearance.Brush\" "
 SuspensionPhysics_Component="\"Object.Settings.Settings"
 SceneComponent="\"Object.Settings.Settings"
 ActorComponent="\"Object.Settings.Settings"
