--- a/BreakingNews/Config/DefaultEngine.ini
+++ b/BreakingNews/Config/DefaultEngine.ini
@@ -21,8 +21,9 @@ GlobalDefaultGameMode=/Game/GM_Chase.GM_Chase_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
-r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.MotionBlur=True
 r.DefaultFeature.AutoExposure=False
+r.AllowGlobalClipPlane=True
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
